@@ -165,7 +165,9 @@ void dJointSetAMotorParam (dJointID, int parameter, dReal value);
 void dJointSetAMotorMode (dJointID, int mode);
 
 void dJointGetBallAnchor (dJointID, dVector3 result);
+void dJointGetBallAnchor2 (dJointID, dVector3 result);
 void dJointGetHingeAnchor (dJointID, dVector3 result);
+void dJointGetHingeAnchor2 (dJointID, dVector3 result);
 void dJointGetHingeAxis (dJointID, dVector3 result);
 dReal dJointGetHingeParam (dJointID, int parameter);
 dReal dJointGetHingeAngle (dJointID);
@@ -175,6 +177,7 @@ dReal dJointGetSliderPositionRate (dJointID);
 void dJointGetSliderAxis (dJointID, dVector3 result);
 dReal dJointGetSliderParam (dJointID, int parameter);
 void dJointGetHinge2Anchor (dJointID, dVector3 result);
+void dJointGetHinge2Anchor2 (dJointID, dVector3 result);
 void dJointGetHinge2Axis1 (dJointID, dVector3 result);
 void dJointGetHinge2Axis2 (dJointID, dVector3 result);
 dReal dJointGetHinge2Param (dJointID, int parameter);
@@ -182,6 +185,7 @@ dReal dJointGetHinge2Angle1 (dJointID);
 dReal dJointGetHinge2Angle1Rate (dJointID);
 dReal dJointGetHinge2Angle2Rate (dJointID);
 void dJointGetUniversalAnchor (dJointID, dVector3 result);
+void dJointGetUniversalAnchor2 (dJointID, dVector3 result);
 void dJointGetUniversalAxis1 (dJointID, dVector3 result);
 void dJointGetUniversalAxis2 (dJointID, dVector3 result);
 int dJointGetAMotorNumAxes (dJointID);
